--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,61 +1,63 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+    push:
+        tags:
+            - "v*.*.*"
+
+    workflow_dispatch:
 
 permissions:
-  contents: write
-  packages: write
+    contents: write
+    packages: write
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+    release:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24'
-          cache: true
+            - name: Set up Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: "1.24"
+                  cache: true
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
-        with:
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Run GoReleaser
+              uses: goreleaser/goreleaser-action@v6
+              with:
+                  version: latest
+                  args: release --clean
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract version
-        id: version
-        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+            - name: Extract version
+              id: version
+              run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_OUTPUT
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            mrshabel/halb:${{ github.ref_name }}
-            mrshabel/halb:latest
-          labels: |
-            org.opencontainers.image.title=halb
-            org.opencontainers.image.description=HALB - Highly Available Layer 7 Load Balancer
-            org.opencontainers.image.version=${{ github.ref_name }}
-            org.opencontainers.image.url=https://github.com/mrshabel/halb
-            org.opencontainers.image.source=https://github.com/mrshabel/halb
-            org.opencontainers.image.licenses=MIT
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v5
+              with:
+                  context: .
+                  push: true
+                  tags: |
+                      mrshabel/halb:${{ github.ref_name }}
+                      mrshabel/halb:latest
+                  labels: |
+                      org.opencontainers.image.title=halb
+                      org.opencontainers.image.description=HALB - Highly Available Layer 7 Load Balancer
+                      org.opencontainers.image.version=${{ github.ref_name }}
+                      org.opencontainers.image.url=https://github.com/mrshabel/halb
+                      org.opencontainers.image.source=https://github.com/mrshabel/halb
+                      org.opencontainers.image.licenses=MIT
